# Quarryfied

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
assets/shaders/: fragment.glsl  vertex.glsl
cmake/: Dependencies.cmake  InteliSense.cmake  lua.cmake
game_resources/main/blocks/: blocks.yaml
src/: blocks.hpp  camera.hpp  chunk.hpp  entity.hpp  globalMacros.hpp  inventory.hpp  main.cpp  materials.hpp  player.hpp  shader.hpp  structs.hpp  timer.hpp
src/core/: globalMacros.hpp  timer.cpp  timer.hpp
src/graphics/: camera.cpp  camera.hpp  materials.cpp  materials.hpp
